# Openwaterkaart_pi

./: CMakeLists.txt  Openwaterkaart_pi.fbp  icons.cpp  icons.h
.svn/: wc.db
Releases/: Openwaterkaart_pi-Plugin_0.1.pkg  openwaterkaart_pi-0.1.1.0-debian-10.deb  openwaterkaart_pi-0.1.1.0-ubuntu-20.04.deb
cmake/: PluginPackage.cmake
src/: Openwaterkaart_pi.cpp  Openwaterkaart_pi.h  Openwaterkaartgui.cpp  Openwaterkaartgui.h  Openwaterkaartgui_impl.cpp  Openwaterkaartgui_impl.h  icons.cpp  icons.h
src/obsolete/: DRgui.cpp  DRgui.h  Openwaterkaart_pi - kopie.cpp  Openwaterkaart_pi - kopie.h  Openwaterkaartgui_impl - kopie.cpp  Openwaterkaartgui_impl - kopie.h
